--- a/hybrid_ga_answers.ipynb
+++ b/hybrid_ga_answers.ipynb
@@ -581,12 +581,12 @@
     "    if args is None:\n",
     "        crossover_point = None\n",
     "    else:\n",
-    "        crossover_point = args[0]  # TODO in here we need one argument, so I assume a one-element list... be better\n",
+    "        crossover_point = args[0]  # in here we need one argument, so I assume a one-element list... could be be better\n",
     "\n",
     "    if crossover_point is None:\n",
     "        crossover_point = len(parent1_genes) // 2\n",
     "\n",
-    "    # TODO: different working with genes whether it's a dict or a list\n",
+    "    # Different working with genes whether it's a dict or a list could be implemented\n",
     "\n",
     "    gene_counter = 0\n",
     "    child1_genes = []\n",
@@ -601,81 +601,6 @@
     "        child1_genes.append(parent2_genes[gene_counter])\n",
     "        child2_genes.append(parent1_genes[gene_counter])\n",
     "        gene_counter += 1\n",
-    "\n",
-    "    return [child1_genes, child2_genes]\n",
-    "\n",
-    "\n",
-    "def uniform_crossover(parent1, parent2, args):\n",
-    "    \"\"\"In this crossover method a gene mask is randomised. By default, there is 2 children. For the first one\n",
-    "    0 indicates genes from the first parent, while 1 - from the second one. For the second one contrarily.\n",
-    "\n",
-    "    no_kids specifies how many children are to be breaded;\n",
-    "\n",
-    "    choice_prob is the probability of choosing a gene from the first parent in a single Bernoulli trial.\n",
-    "    \"\"\"\n",
-    "    parent1_genes = list(parent1.genome)\n",
-    "    parent2_genes = list(parent2.genome)\n",
-    "\n",
-    "    if args is None:\n",
-    "        choice_prob = 0.5\n",
-    "    else:\n",
-    "        choice_prob = args[0]  # TODO in here we need one argument, so I assume a one-element list... be better\n",
-    "\n",
-    "    # TODO: different working with genes whether it's a dict or a list\n",
-    "\n",
-    "    child1_genes = []\n",
-    "    child2_genes = []\n",
-    "\n",
-    "    gene_mask = np_binom(1, 1 - choice_prob, len(parent1_genes))\n",
-    "    index = 0\n",
-    "\n",
-    "    for indicator in gene_mask:\n",
-    "        if indicator == 0:\n",
-    "            child1_genes.append(parent1_genes[index])\n",
-    "            child2_genes.append(parent2_genes[index])\n",
-    "        else:\n",
-    "            child1_genes.append(parent2_genes[index])\n",
-    "            child2_genes.append(parent1_genes[index])\n",
-    "        index += 1\n",
-    "\n",
-    "    return [child1_genes, child2_genes]\n",
-    "\n",
-    "\n",
-    "def plco(parent1, parent2, args):  # partially linear crossover operator\n",
-    "    \"\"\"Two children are created; integer-valued genes are exchanged as in single crossover operator,\n",
-    "    while the real-valued genes are linearly combined using formula:\n",
-    "\n",
-    "    child_gene = alfa * parent1_gene + beta * parent2_gene\n",
-    "\n",
-    "    transit point is the index from which crossover is linear; beforehand it's single point\n",
-    "    \"\"\"\n",
-    "    parent1_genes = list(parent1.genome)\n",
-    "    parent2_genes = list(parent2.genome)\n",
-    "    no_genes = len(parent1_genes)\n",
-    "\n",
-    "    if args is None:\n",
-    "        transit_point = no_genes // 2\n",
-    "        alfa = 0.5\n",
-    "        beta = 0.5\n",
-    "    else:\n",
-    "        transit_point = args[0]\n",
-    "        alfa = args[1]\n",
-    "        beta = args[2]\n",
-    "\n",
-    "    # TODO: different working with genes whether it's a dict or a list\n",
-    "\n",
-    "    child1_genes = []\n",
-    "    child2_genes = []\n",
-    "\n",
-    "    for index in range(transit_point // 2 + 1):  # single-point crossover part 1\n",
-    "        child1_genes.append(parent1_genes[index])\n",
-    "        child2_genes.append(parent2_genes[index])\n",
-    "    for index in range(transit_point // 2 + 1, transit_point):  # single-point crossover part 2\n",
-    "        child1_genes.append(parent2_genes[index])\n",
-    "        child2_genes.append(parent1_genes[index])\n",
-    "    for index in range(transit_point, no_genes):  # linear crossover\n",
-    "        child1_genes.append(alfa * parent1_genes[index] + beta * parent2_genes[index])\n",
-    "        child2_genes.append(alfa * parent2_genes[index] + beta * parent1_genes[index])\n",
     "\n",
     "    return [child1_genes, child2_genes]"
    ],
@@ -894,7 +819,7 @@
     "        value, to be accepted as a new current generation.\"\"\"\n",
     "        fitness_comparison = {}\n",
     "        for id_of_rival, generation in self.rival_gen_pool.items():\n",
-    "            fitness_comparison[id_of_rival] = generation.fitness_ranking[0].get('fitness value')  # TODO: IndexError: list index out of range\n",
+    "            fitness_comparison[id_of_rival] = generation.fitness_ranking[0].get('fitness value')\n",
     "        self.current_generation = self.rival_gen_pool.get(max(fitness_comparison, key=fitness_comparison.get))\n",
     "        self.accepted_gen_list.append(self.current_generation)\n",
     "        self.best_fit_history.append(self.current_generation.fitness_ranking[0].get('fitness value'))\n",
@@ -1001,11 +926,7 @@
     "\n",
     "                \"\"\"Last stage of each iteration is to choose the next accepted Generation and mutate it:\"\"\"\n",
     "                self._choose_best_rival_generation()\n",
-    "                self.mutate()\n",
-    "\n",
-    "    def fitness_plot(self):  # TODO: finish with an optional argument for using plotly or matplotlib\n",
-    "        \"\"\"Method for plotting fitness values history of the best Members from each accepted Generation.\"\"\"\n",
-    "        pass"
+    "                self.mutate()"
    ],
    "metadata": {
     "id": "ZzaJFJB1NdwD"
@@ -1167,7 +1088,7 @@
     "        no_parents_pairs=10,  # has to be even for now\n",
     "        mutation_prob=float(1 / 6)\n",
     "    )\n",
-    "    new_ga_instance.run()\n",
+    "    new_ga_instance.run()  # due to Colab using Python 3.11 we might encounter some warnings, but the code should still work\n",
     "\n",
     "    print(f\"\\nOur code returned {new_ga_instance.best_solution()} as the best solution.\")"
    ],
