Added back the `evaluate()` single-process method to the `Generation` class.

--- a/hybrid_ga_framework.ipynb
+++ b/hybrid_ga_framework.ipynb
@@ -336,7 +336,23 @@
     "            raise ValueError(f\"Pool size = {pool_size} is not between 0 and number of parents mating \"\n",
     "                             f\"({self.num_parents_pairs})\")\n",
     "        self.size = len(generation_members)\n",
-    "        self.fitness_ranking = []"
+    "        self.fitness_ranking = []\n",
+    "\n",
+    "    def evaluate(self, reverse=True):\n",
+    "        \"\"\"This method uses the fitness function stored in members of the generation to create and then sort the fitness\n",
+    "        ranking by the computed fitness values; 'reverse' means sorting will be performed from max fitness value to min. This method does not implement multiprocessing!!!\n",
+    "\n",
+    "        Parameters:\n",
+    "            reverse (Bool=True, optional): parameter which decided whether the fitness ranking should be sorted in\n",
+    "                ascending order of fitness values (reverse=False) or in descending order (reverse=True), which is\n",
+    "                the default.\n",
+    "        \"\"\"\n",
+    "        for i in range(self.size):\n",
+    "            self.fitness_ranking.append(\n",
+    "                {'index': i, 'fitness value': self.members[i].evaluate()}\n",
+    "            )\n",
+    "\n",
+    "        self.fitness_ranking.sort(key=sort_dict_by_fit, reverse=reverse)"
    ],
    "id": "a424c86e51742f0a"
   },
