Correction to `sort_dict_by_fit`

--- a/hybrid_ga_framework.ipynb
+++ b/hybrid_ga_framework.ipynb
@@ -67,16 +67,14 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "def sort_dict_by_fit(dictionary: None):\n",
-    "    \"\"\"Used as a key in 'sort' method applied to a list of dictionaries with chromosomes' indexes in a generation as\n",
-    "     keys and their fitness values as values. Used to sort dicts in the list by fitness value.\n",
+    "def sort_dict_by_fit(dictionary: dict) -> float:\n",
+    "    \"\"\"Used as a key function for sorting a list of dictionaries by their 'fitness value'.\n",
     "\n",
     "    Parameters:\n",
-    "        dictionary (None): A None arg, allowing the `sort` method to use this function for key creation to sort\n",
-    "            dictionaries in the list.\n",
+    "        dictionary (dict): A dictionary with at least a 'fitness value' key.\n",
     "\n",
     "    Returns:\n",
-    "        None: The same list of dictionaries as provided, but sorted by fitness value inside these dicts.\n",
+    "        float: The fitness value to be used for sorting.\n",
     "    \"\"\"\n",
     "    return dictionary['fitness value']"
    ],
