Rest of the updates regarding changes to fitness ranking handling

--- a/hybrid_ga_framework.ipynb
+++ b/hybrid_ga_framework.ipynb
@@ -786,7 +786,7 @@
     "\n",
     "                members_per_worker = no_members / no_workers\n",
     "                if members_per_worker <= 1:\n",
-    "                    no_workers = no_members\n",
+    "                    no_workers = int(no_members)\n",
     "\n",
     "                indexes_batches = split_indexes(num_members=no_members, num_workers=no_workers)\n",
     "\n",
@@ -800,10 +800,13 @@
     "                for worker in self.workers:\n",
     "                    worker.join()\n",
     "\n",
-    "                \"\"\"Just for testing:\"\"\"\n",
-    "                new_members = self.rival_gen_pool.get(0).members\n",
-    "                for member in new_members:\n",
-    "                    print(member.fit_val)\n",
+    "                \"\"\"Reset workers\"\"\"\n",
+    "                self.workers = []\n",
+    "\n",
+    "                \"\"\"Rebuild fitness ranking for each Generation\"\"\"\n",
+    "                for gen_id, generation in self.rival_gen_pool.items():\n",
+    "                    ...\n",
+    "                    self.rival_gen_pool[gen_id] = generation  # reassign updated generation\n",
     "\n",
     "                \"\"\"Last stage of each iteration is to choose the next accepted Generation and mutate it:\"\"\"\n",
     "                self._choose_best_rival_generation()\n",
