--- a/hybrid_ga_answers.ipynb
+++ b/hybrid_ga_answers.ipynb
@@ -24,35 +24,13 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "MgTLWQAjPFMb",
-    "outputId": "44dc9517-b5e6-4d22-c5f3-4dbd80c48ef9"
-   },
-   "execution_count": 3,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Collecting pygad\n",
-      "  Downloading pygad-3.4.0-py3-none-any.whl.metadata (23 kB)\n",
-      "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.11/dist-packages (from pygad) (3.1.1)\n",
-      "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from pygad) (3.10.0)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from pygad) (2.0.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (1.3.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (4.57.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (11.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (3.2.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->pygad) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->pygad) (1.17.0)\n",
-      "Downloading pygad-3.4.0-py3-none-any.whl (86 kB)\n",
-      "\u001B[?25l   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m0.0/86.8 kB\u001B[0m \u001B[31m?\u001B[0m eta \u001B[36m-:--:--\u001B[0m\r\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m86.8/86.8 kB\u001B[0m \u001B[31m3.1 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
-      "\u001B[?25hInstalling collected packages: pygad\n",
-      "Successfully installed pygad-3.4.0\n"
-     ]
+    "outputId": "44dc9517-b5e6-4d22-c5f3-4dbd80c48ef9",
+    "jupyter": {
+     "is_executing": true
     }
-   ]
+   },
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -870,6 +848,11 @@
     "        iterations of creating new/rival Generations, choosing the best one and mutation, if necessary.\"\"\"\n",
     "        print(f\"\\nCreating initial population\\n\")\n",
     "        self._create_initial_generation()\n",
+    "\n",
+    "        # For testing:\n",
+    "        for member in self.current_generation.members:\n",
+    "            print(member.fit_val)\n",
+    "\n",
     "        operator_combinations_ids = list(self.operators.keys())\n",
     "\n",
     "        with self.manager:\n",
@@ -897,10 +880,12 @@
     "                for worker in self.workers:\n",
     "                    worker.join()\n",
     "\n",
-    "                \"\"\"Just for testing:\"\"\"\n",
+    "                \"\"\"\n",
+    "                #Just for testing:\n",
     "                new_members = self.rival_gen_pool.get(0).members\n",
     "                for member in new_members:\n",
     "                    print(member.genome)\n",
+    "                \"\"\"\n",
     "\n",
     "                self.workers = []\n",
     "\n",
@@ -914,7 +899,7 @@
     "\n",
     "                members_per_worker = no_members / no_workers\n",
     "                if members_per_worker <= 1:\n",
-    "                    no_workers = no_members\n",
+    "                    no_workers = int(no_members)\n",
     "\n",
     "                indexes_batches = split_indexes(num_members=no_members, num_workers=no_workers)\n",
     "\n",
@@ -936,10 +921,29 @@
     "                for worker in self.workers:\n",
     "                    worker.join()\n",
     "\n",
-    "                \"\"\"Just for testing:\"\"\"\n",
+    "                \"\"\"\n",
+    "                # Just for testing:\n",
     "                new_members = self.rival_gen_pool.get(0).members\n",
     "                for member in new_members:\n",
     "                    print(member.fit_val)\n",
+    "                \"\"\"\n",
+    "\n",
+    "                \"\"\"Reset workers\"\"\"\n",
+    "                self.workers = []\n",
+    "\n",
+    "                \"\"\"Rebuild fitness ranking for each Generation\"\"\"\n",
+    "                for gen_id, generation in self.rival_gen_pool.items():\n",
+    "                    generation.fitness_ranking = []\n",
+    "                    for i, member in enumerate(generation.members):\n",
+    "                        if member.fit_val is None:\n",
+    "                            print(f\"Skipping member {i} in Generation {gen_id} due to None fitness!\")\n",
+    "                            continue  # <-- skip if fitness is None\n",
+    "                        generation.fitness_ranking.append({'index': i, 'fitness value': member.fit_val})\n",
+    "                    if generation.fitness_ranking:\n",
+    "                        generation.fitness_ranking.sort(key=sort_dict_by_fit, reverse=True)\n",
+    "                    else:\n",
+    "                        print(f\"Warning: Generation {gen_id} has no valid members to rank!\")\n",
+    "                    self.rival_gen_pool[gen_id] = generation  # reassign updated generation\n",
     "\n",
     "                \"\"\"Last stage of each iteration is to choose the next accepted Generation and mutate it:\"\"\"\n",
     "                self._choose_best_rival_generation()\n",
@@ -1089,7 +1093,7 @@
     "if __name__ == '__main__':\n",
     "    \"\"\"Secondly, approach with our GeneticAlgorithm:\"\"\"\n",
     "    new_ga_instance = GeneticAlgorithm(\n",
-    "        initial_pop_size=10,\n",
+    "        initial_pop_size=12,\n",
     "        number_of_generations=5,\n",
     "        elite_size=0,\n",
     "        args={\n",
@@ -1102,12 +1106,12 @@
     "        selection=tournament_selection,\n",
     "        crossover=single_point_crossover,\n",
     "        pool_size=4,  # we could find a better value for this\n",
-    "        no_parents_pairs=10,  # has to be even for now\n",
+    "        no_parents_pairs=6,  # has to be even for now\n",
     "        mutation_prob=float(1 / 6)\n",
     "    )\n",
-    "    new_ga_instance.run()  # due to Colab using Python 3.11 we might encounter some warnings, but the code should still work\n",
+    "    new_ga_instance.run()\n",
     "\n",
-    "    print(f\"\\nOur code returned {new_ga_instance.best_solution()} as the best solution.\")"
+    "    print(f\"Our code returned {new_ga_instance.best_solution()}\")"
    ],
    "metadata": {
     "colab": {
