Minor changes in comments and parameters.

--- a/hybrid_ga_framework.ipynb
+++ b/hybrid_ga_framework.ipynb
@@ -99,7 +99,7 @@
     "            in each chromosome, so this function should never return a single int, str, etc.\n",
     "    \"\"\"\n",
     "    gene_space, length = ga_args.get('genome')\n",
-    "    return ???"
+    "    return ???  # TODO"
    ],
    "id": "9d1f0d37cbd322c1"
   },
@@ -389,17 +389,17 @@
     "    global identification\n",
     "\n",
     "    new_members = []\n",
-    "    parents_in_order = ???\n",
+    "    parents_in_order = ???  # TODO\n",
     "\n",
     "    for index in range(parent_generation.num_parents_pairs):\n",
     "        \"\"\"We always take 2 consecutive members from the parents_in_order list and pass them to the crossover\n",
     "        operator to get genomes of new members, for the new generation, to be created.\"\"\"\n",
-    "        child1_genome, child2_genome = ???\n",
-    "        new_members.append(???)\n",
-    "        new_members.append(???)\n",
-    "        identification += ???\n",
+    "        child1_genome, child2_genome = ???  # TODO\n",
+    "        new_members.append(???)  # TODO\n",
+    "        new_members.append(???)  # TODO\n",
+    "        identification += ???  # TODO\n",
     "\n",
-    "    new_generation = Generation(???)\n",
+    "    new_generation = Generation(???)  # TODO\n",
     "\n",
     "    \"\"\"Generation pool is created as a DictProxy and each process (worker) will add it's Generation under a different key, so no additional lock is required.\"\"\"\n",
     "    generation_pool[id] = new_generation"
@@ -423,8 +423,8 @@
     "        population_size (int): Number of Members in each Generation from the generation_pool.\n",
     "    \"\"\"\n",
     "    for index in index_range:\n",
-    "        generation_id = ???\n",
-    "        member_index = ???\n",
+    "        generation_id = ???  # TODO\n",
+    "        member_index = ???  # TODO\n",
     "\n",
     "        \"\"\"What exactly should we fetch???\"\"\"\n",
     "        ...\n",
@@ -727,9 +727,9 @@
     "        value, to be accepted as a new current generation.\"\"\"\n",
     "        fitness_comparison = {}\n",
     "\n",
-    "        for id_of_rival, generation in ???:\n",
-    "            fitness_comparison[id_of_rival] = ???\n",
-    "        self.current_generation = ???\n",
+    "        for id_of_rival, generation in ???:  # TODO\n",
+    "            fitness_comparison[id_of_rival] = ???  # TODO\n",
+    "        self.current_generation = ???  # TODO\n",
     "\n",
     "        self.accepted_gen_list.append(self.current_generation)\n",
     "        self.best_fit_history.append(self.current_generation.fitness_ranking[0].get('fitness value'))\n",
@@ -769,8 +769,7 @@
     "                \"\"\"Rival generations are created based on accessible combinations of selection and crossover\n",
     "                operators with different processes in parallel:\"\"\"\n",
     "                for combination_id in operator_combinations_ids:\n",
-    "                    new_worker = Process(???)\n",
-    "                    )\n",
+    "                    new_worker = Process(???)  # TODO\n",
     "                    new_worker.start()\n",
     "                    self.workers.append(new_worker)\n",
     "\n",
@@ -792,7 +791,7 @@
     "\n",
     "                for index in range(no_workers):\n",
     "                    indexes_of_members_to_evaluate = indexes_batches[index]\n",
-    "                    new_worker = Process(???)\n",
+    "                    new_worker = Process(???)  # TODO\n",
     "                    new_worker.start()\n",
     "                    self.workers.append(new_worker)\n",
     "\n",
@@ -926,7 +925,7 @@
     "if __name__ == '__main__':\n",
     "    \"\"\"Secondly, approach with our GeneticAlgorithm:\"\"\"\n",
     "    new_ga_instance = GeneticAlgorithm(\n",
-    "        initial_pop_size=10,\n",
+    "        initial_pop_size=12,\n",
     "        number_of_generations=5,\n",
     "        elite_size=0,\n",
     "        args={\n",
@@ -939,12 +938,12 @@
     "        selection=tournament_selection,\n",
     "        crossover=single_point_crossover,\n",
     "        pool_size=4,  # we could find a better value for this\n",
-    "        no_parents_pairs=10,  # has to be even for now\n",
+    "        no_parents_pairs=6,  # has to be even for now\n",
     "        mutation_prob=float(1 / 6)\n",
     "    )\n",
-    "    new_ga_instance.run()  # due to Colab using Python 3.11 we might encounter some warnings, but the code should still work\n",
+    "    new_ga_instance.run()\n",
     "\n",
-    "    print(f\"\\nOur code returned {new_ga_instance.best_solution()} as the best solution.\")"
+    "    print(f\"Our code returned {new_ga_instance.best_solution()}\")"
    ],
    "id": "1b5c8a1d75460ae"
   }
